Refactoring, bit cleaning up, improving the spring config for the springai project